--- a/ProyectoIpc2/Views/MenuXtreme/MenuXtreme.cshtml
+++ b/ProyectoIpc2/Views/MenuXtreme/MenuXtreme.cshtml
@@ -55,7 +55,7 @@
     </div>
 
     <div class="option-container">
-        <img src="~/Content/Imgs/reversi.png" alt="" width="454" class="cabezera">
+        <img src="~/Content/Imgs/reversi.png" alt="" width="454" height="44 " class="cabezera">
 
         <label for="">Ancho de tablero:</label>
         <select id="anchoTablero">
@@ -86,7 +86,10 @@
             <option value="">Normal</option>
             <option value="">Inverso</option>
         </select>
-
+        <select id="apertura">
+            <option value="">Apertura Normal</option>
+            <option value="">Apertura Perzonalizada</option>
+        </select>
         <label>Colores Jugador 1:</label>
         <select class="color" id="color1_p1">
             <option>Ninguno</option>
